<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#006600"
        android:gravity="center_vertical|left"
        android:paddingLeft="10dip"
        android:text="@string/strTodayRecord"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvTeamName"
            android:paddingLeft="10dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strGameViewTeamName" />
        
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right|center_vertical" >
        
	        <TextView
	            android:id="@+id/tvRecord"
	            android:paddingRight="10dip"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/strGameViewRecord" />
		</LinearLayout>
		
    </LinearLayout>
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#006600"
        android:gravity="center_vertical|left"
        android:paddingLeft="10dip"
        android:text="@string/strTodayTitle"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/m_lv_Schedule"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
    </ListView>
    
</LinearLayout>
