<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txtLoadSchedule"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#006600"
        android:text="Load Schedule"
        android:textColor="#FFFFFF" />
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/strSelectDiv" />

    <Spinner
        android:id="@+id/spinnerDiv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/strSelectTeam" />
    
    <Spinner
        android:id="@+id/spinnerTeam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right|center_vertical" >

        <Button
            android:id="@+id/btnLoad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/strSaveLoad"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>